--- a/my_stl/my_stl/my_stl.vcxproj
+++ b/my_stl/my_stl/my_stl.vcxproj
@@ -62,6 +62,9 @@
   <ItemGroup>
     <ClInclude Include="Alloc.h" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Test.cpp" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
